--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "pinia": "^2.0.32",
+    "three": "^0.151.3",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
