--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@rollup/plugin-dsv": "^3.0.2",
+    "axios": "^1.3.5",
     "pinia": "^2.0.32",
-    "three": "^0.151.3",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
